<resources>
    <string name="app_name">Sesion Actividades</string>
    <string name="pass_login">Contraseña</string>
    <string name="user_login">Correo electrónico</string>
    <string name="iniciar_login">Iniciar</string>
    <string name="registrarse_login">Registrarse</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="repass">Repetir Contraseña</string>
    <string name="registar">Registar</string>
    <string name="exit">Cerrar Sesión</string>
</resources>
